tag overflow fixed

--- a/src/components/Tag/style.module.scss
+++ b/src/components/Tag/style.module.scss
@@ -3,7 +3,7 @@
 .tag {
     background-color: variables.$primary-color;
     width: 84px;
-    height: 18px;
+    min-height: 18px;
     color: white;
     display: flex;
     justify-content: center;
@@ -18,6 +18,6 @@
     .tag {
         font-size: 14px;
         width: 115px;
-        height: 25px;
+        min-height: 25px;
     }
 }
